--- a/donation/templates/base.html
+++ b/donation/templates/base.html
@@ -9,6 +9,38 @@
     <link rel="stylesheet" href="{% static "css/style.css" %}" />
   </head>
   <body>
+    <header {% block header %}{% endblock %}>
+      <nav class="container container--70">
+        {% if user.is_authenticated %}
+         <ul class="nav--actions">
+          <li class="logged-user">
+            Witaj Agata
+            <ul class="dropdown">
+              <li><a href="#">Profil</a></li>
+              <li><a href="#">Ustawienia</a></li>
+              <li><a href="#">Wyloguj</a></li>
+            </ul>
+          </li>
+        </ul>
+        {% else %}
+        <ul class="nav--actions">
+          <li><a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+          <li><a href="{% url 'register' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+        </ul>
+        {% endif %}
+
+
+        <ul>
+          <li><a href="{% url 'landing_page' %}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{% url 'landing_page' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'landing_page' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'landing_page' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'add_donation' %}" class="btn btn--without-border">Przekaż dary</a></li>
+          <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
+        </ul>
+      </nav>
+
+
           {% block content %}
           {% endblock %}
       <footer>
