--- a/donation/templates/login.html
+++ b/donation/templates/login.html
@@ -1,24 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 {%  block content %}
-    <header>
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li><a href="#">Zaloguj</a></li>
-          <li class="highlighted"><a href="#">Załóż konto</a></li>
-        </ul>
-
-        <ul>
-          <li><a href="#">Start</a></li>
-          <li><a href="#">O co chodzi?</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Fundacje i organizacje</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
     </header>
-
-    <section class="login-page">
+    <section id="login" class="login-page">
       <h2>Zaloguj się</h2>
       <form>
         <div class="form-group">
@@ -30,7 +14,7 @@
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="#" class="btn btn--without-border">Załóż konto</a>      
+          <a href="{% url 'register' %}#register" class="btn btn--without-border">Załóż konto</a>
           <button class="btn" type="submit">Zaloguj się</button> 
         </div>
       </form>
