--- a/donation/templates/register.html
+++ b/donation/templates/register.html
@@ -1,24 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 {%  block content %}
-    <header>
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li><a href="#">Zaloguj</a></li>
-          <li class="highlighted"><a href="#">Załóż konto</a></li>
-        </ul>
-
-        <ul>
-          <li><a href="#">Start</a></li>
-          <li><a href="#">O co chodzi?</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Fundacje i organizacje</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
     </header>
-
-    <section class="login-page">
+    <section id="register" class="login-page">
       <h2>Załóż konto</h2>
       <form>
         <div class="form-group">
@@ -38,7 +22,7 @@
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="login.html" class="btn btn--without-border">Zaloguj się</a>
+          <a href="{% url 'login' %}#login" class="btn btn--without-border">Zaloguj się</a>
           <button class="btn" type="submit">Załóż konto</button>
         </div>
       </form>
