--- a/donation/templates/register.html
+++ b/donation/templates/register.html
@@ -7,7 +7,7 @@
     {% if messages %}
         <div>
         {% for message in messages %}
-            <p style="color: red; font-size: 20px">{{ message }}</p>
+            <p class="messages">{{ message }}</p>
         {% endfor %}
         </div>
     {% endif %}
