--- a/donation/templates/form-confirmation.html
+++ b/donation/templates/form-confirmation.html
@@ -1,24 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
+{% block header %}class="header--form-page"{% endblock %}
 {%  block content %}
-    <header class="header--form-page">
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li class="logged-user">
-            Witaj Agata
-            <ul class="dropdown">
-              <li><a href="#">Profil</a></li>
-              <li><a href="#">Moje zbiórki</a></li>
-              <li><a href="#">Wyloguj</a></li>
-            </ul>
-          </li>
-        </ul>
-
-      </nav>
-
       <div class="slogan container container--90">
           <h2>
-            Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie
+            Dziękujemy za przesłanie formularza. Na maila prześlemy wszelkie
             informacje o odbiorze.
           </h2>
       </div>
