--- a/donation/templates/form.html
+++ b/donation/templates/form.html
@@ -53,6 +53,7 @@
         <div class="form--steps-counter">Krok <span>1</span>/5</div>
 
         <form action="{% url 'add_donation' %}" method="post">
+        {% csrf_token %}
           <!-- STEP 1: class .active is switching steps -->
           <div data-step="1" class="active">
             <h3>Zaznacz co chcesz oddać:</h3>
@@ -222,7 +223,7 @@
 
             <div class="form-group form-group--buttons">
               <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="submit" class="btn">Potwierdzam</button>
+                <button type="submit" class="btn">Potwierdzam</button>
             </div>
           </div>
         </form>
