Add user's donations view

--- a/donation/templates/user.html
+++ b/donation/templates/user.html
@@ -6,9 +6,9 @@
 
       <div class="about-us--text">
         <h2>Twoje dane:</h2>
-        <p>Imię: {{ user.first_name }}</p>
-        <p>Nazwisko: {{ user.last_name }}</p>
-        <p>e-mail: {{ user.email }}</p>
+        <p class="text">Imię: {{ user.first_name }}</p>
+        <p class="text">Nazwisko: {{ user.last_name }}</p>
+        <p class="text">e-mail: {{ user.email }}</p>
       </div>
     </section>
 {% endblock %}
