--- a/donation/templates/base.html
+++ b/donation/templates/base.html
@@ -17,7 +17,7 @@
             Witaj {{ user.first_name }}
             <ul class="dropdown">
               <li><a href="{% url 'user' user.id %}">Profil</a></li>
-              <li><a href="#">Ustawienia</a></li>
+              <li><a href="{% url 'user_donations' user.id %}">Twoje dary</a></li>
                 {% if user.is_superuser %}
               <li><a href="/admin/">Panel administracyjny</a></li>
                 {% endif %}
