--- a/donation/static/css/style.css
+++ b/donation/static/css/style.css
@@ -1,137 +1,64 @@
 @import url("https://fonts.googleapis.com/css?family=Merriweather:300,300i,400|Open+Sans:300,400,600&subset=latin-ext");
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-/* line 11, scss/vendor/_normalize.scss */
+
 html {
   line-height: 1.15;
-  /* 1 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */
 }
 
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-/* line 23, scss/vendor/_normalize.scss */
 body {
   margin: 0;
 }
 
-/**
- * Render the `main` element consistently in IE.
- */
-/* line 31, scss/vendor/_normalize.scss */
 main {
   display: block;
 }
 
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-/* line 40, scss/vendor/_normalize.scss */
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-/* line 53, scss/vendor/_normalize.scss */
 hr {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
-  /* 1 */
   height: 0;
-  /* 1 */
   overflow: visible;
-  /* 2 */
 }
 
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-/* line 64, scss/vendor/_normalize.scss */
 pre {
   font-family: monospace, monospace;
-  /* 1 */
   font-size: 1em;
-  /* 2 */
 }
 
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-/* line 76, scss/vendor/_normalize.scss */
 a {
   background-color: transparent;
 }
 
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-/* line 85, scss/vendor/_normalize.scss */
 abbr[title] {
   border-bottom: none;
-  /* 1 */
   text-decoration: underline;
-  /* 2 */
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
-  /* 2 */
 }
 
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-/* line 95, scss/vendor/_normalize.scss */
 b,
 strong {
   font-weight: bolder;
 }
 
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-/* line 105, scss/vendor/_normalize.scss */
+
 code,
 kbd,
 samp {
   font-family: monospace, monospace;
-  /* 1 */
   font-size: 1em;
-  /* 2 */
 }
 
-/**
- * Add the correct font size in all browsers.
- */
-/* line 116, scss/vendor/_normalize.scss */
+
 small {
   font-size: 80%;
 }
 
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-/* line 125, scss/vendor/_normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -140,74 +67,40 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 133, scss/vendor/_normalize.scss */
 sub {
   bottom: -0.25em;
 }
 
-/* line 137, scss/vendor/_normalize.scss */
 sup {
   top: -0.5em;
 }
 
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-/* line 148, scss/vendor/_normalize.scss */
 img {
   border-style: none;
 }
 
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-/* line 160, scss/vendor/_normalize.scss */
 button,
 input,
 optgroup,
 select,
 textarea {
   font-family: inherit;
-  /* 1 */
   font-size: 100%;
-  /* 1 */
   line-height: 1.15;
-  /* 1 */
   margin: 0;
-  /* 2 */
 }
 
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-/* line 176, scss/vendor/_normalize.scss */
 button,
 input {
-  /* 1 */
   overflow: visible;
 }
 
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-/* line 186, scss/vendor/_normalize.scss */
+
 button,
 select {
-  /* 1 */
   text-transform: none;
 }
 
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-/* line 195, scss/vendor/_normalize.scss */
 button,
 [type="button"],
 [type="reset"],
@@ -227,10 +120,7 @@ button::-moz-focus-inner,
   padding: 0;
 }
 
-/**
- * Restore the focus styles unset by the previous rule.
- */
-/* line 218, scss/vendor/_normalize.scss */
+
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
@@ -238,21 +128,11 @@ button:-moz-focusring,
   outline: 1px dotted ButtonText;
 }
 
-/**
- * Correct the padding in Firefox.
- */
-/* line 229, scss/vendor/_normalize.scss */
+
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
 
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-/* line 240, scss/vendor/_normalize.scss */
 legend {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -269,27 +149,15 @@ legend {
   /* 1 */
 }
 
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-/* line 253, scss/vendor/_normalize.scss */
+
 progress {
   vertical-align: baseline;
 }
 
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-/* line 261, scss/vendor/_normalize.scss */
 textarea {
   overflow: auto;
 }
 
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-/* line 270, scss/vendor/_normalize.scss */
 [type="checkbox"],
 [type="radio"] {
   -webkit-box-sizing: border-box;
@@ -1208,14 +1076,12 @@ header nav ul li:last-of-type {
   font-size: 1.6rem;
 }
 
-/* line 1, scss/modules/homepage-sections/_steps.scss */
 .steps {
   margin: 60px 0;
   padding: 0 30px;
   text-align: center;
 }
 
-/* line 6, scss/modules/homepage-sections/_steps.scss */
 .steps--container {
   margin: 0 auto;
   padding: 50px 0;
@@ -1232,7 +1098,6 @@ header nav ul li:last-of-type {
       justify-content: space-around;
 }
 
-/* line 17, scss/modules/homepage-sections/_steps.scss */
 .steps--item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1248,7 +1113,6 @@ header nav ul li:last-of-type {
   padding: 0 35px;
 }
 
-/* line 24, scss/modules/homepage-sections/_steps.scss */
 .steps--item .icon {
   width: 60px;
   height: 60px;
@@ -1258,33 +1122,27 @@ header nav ul li:last-of-type {
   display: block;
 }
 
-/* line 33, scss/modules/homepage-sections/_steps.scss */
 .steps--item .icon--hands {
   background-image: url("../images/icon-hands.png");
 }
 
-/* line 33, scss/modules/homepage-sections/_steps.scss */
 .steps--item .icon--arrow {
   background-image: url("../images/icon-arrow.png");
 }
 
-/* line 33, scss/modules/homepage-sections/_steps.scss */
 .steps--item .icon--glasses {
   background-image: url("../images/icon-glasses.png");
 }
 
-/* line 33, scss/modules/homepage-sections/_steps.scss */
 .steps--item .icon--courier {
   background-image: url("../images/icon-courier.png");
 }
 
-/* line 39, scss/modules/homepage-sections/_steps.scss */
 .steps--item h3 {
   font-size: 1.8rem;
   margin-bottom: 0;
 }
 
-/* line 43, scss/modules/homepage-sections/_steps.scss */
 .steps--item h3:after {
   content: "";
   display: block;
@@ -1295,17 +1153,14 @@ header nav ul li:last-of-type {
   background-color: #3c3c3c;
 }
 
-/* line 54, scss/modules/homepage-sections/_steps.scss */
 .steps--item p {
   font-size: 1.6rem;
 }
 
-/* line 59, scss/modules/homepage-sections/_steps.scss */
 .steps .btn {
   margin-top: 30px;
 }
 
-/* line 1, scss/modules/homepage-sections/_about-us.scss */
 .about-us {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1317,12 +1172,10 @@ header nav ul li:last-of-type {
   padding: 60px 0;
 }
 
-/* line 7, scss/modules/homepage-sections/_about-us.scss */
 .about-us > div {
   width: 50%;
 }
 
-/* line 11, scss/modules/homepage-sections/_about-us.scss */
 .about-us--text {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1337,14 +1190,12 @@ header nav ul li:last-of-type {
   text-align: center;
 }
 
-/* line 16, scss/modules/homepage-sections/_about-us.scss */
 .about-us--text p {
   width: 70%;
   font-size: 2.2rem;
   line-height: 2em;
 }
 
-/* line 22, scss/modules/homepage-sections/_about-us.scss */
 .about-us--text-signature {
   width: 200px;
   margin-right: 50px;
@@ -1352,13 +1203,11 @@ header nav ul li:last-of-type {
       align-self: flex-end;
 }
 
-/* line 30, scss/modules/homepage-sections/_about-us.scss */
 .about-us--image img {
   width: 100%;
   height: auto;
 }
 
-/* line 1, scss/modules/homepage-sections/_help.scss */
 .help {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1376,7 +1225,6 @@ header nav ul li:last-of-type {
   margin: 60px auto;
 }
 
-/* line 7, scss/modules/homepage-sections/_help.scss */
 .help--buttons {
   padding: 0;
   margin: 20px 0;
@@ -1386,24 +1234,20 @@ header nav ul li:last-of-type {
   display: flex;
 }
 
-/* line 13, scss/modules/homepage-sections/_help.scss */
 .help--buttons li {
   margin: 0 10px;
 }
 
-/* line 18, scss/modules/homepage-sections/_help.scss */
 .help--slides {
   width: 100%;
   margin-top: 30px;
   display: none;
 }
 
-/* line 23, scss/modules/homepage-sections/_help.scss */
 .help--slides.active {
   display: block;
 }
 
-/* line 27, scss/modules/homepage-sections/_help.scss */
 .help--slides > p {
   margin: 0 auto 30px;
   max-width: 630px;
@@ -1413,13 +1257,11 @@ header nav ul li:last-of-type {
   line-height: 2em;
 }
 
-/* line 36, scss/modules/homepage-sections/_help.scss */
 .help--slides ul {
   list-style: none;
   padding: 0;
 }
 
-/* line 43, scss/modules/homepage-sections/_help.scss */
 .help--slides-items li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1431,22 +1273,18 @@ header nav ul li:last-of-type {
   margin-bottom: 35px;
 }
 
-/* line 49, scss/modules/homepage-sections/_help.scss */
 .help--slides-items li:last-child {
   margin-bottom: 0;
 }
 
-/* line 54, scss/modules/homepage-sections/_help.scss */
 .help--slides-items .col {
   width: 100%;
 }
 
-/* line 57, scss/modules/homepage-sections/_help.scss */
 .help--slides-items .col:last-child {
   text-align: right;
 }
 
-/* line 61, scss/modules/homepage-sections/_help.scss */
 .help--slides-items .col:after {
   content: "";
   width: 70%;
@@ -1457,38 +1295,35 @@ header nav ul li:last-of-type {
   background-color: #bcbcbc;
 }
 
-/* line 72, scss/modules/homepage-sections/_help.scss */
 .help--slides-items .col:last-child:after {
   float: right;
 }
 
-/* line 77, scss/modules/homepage-sections/_help.scss */
 .help--slides-items .col .title {
   font-family: 'Merriweather', serif;
   font-weight: 300;
   font-style: normal;
   font-size: 2rem;
   margin-bottom: 5px;
+  margin-right: 30px;
 }
 
-/* line 83, scss/modules/homepage-sections/_help.scss */
 .help--slides-items .col .subtitle {
-  font-family: 'Merriweather', serif;
-  font-weight: 300;
-  font-style: light;
-  font-size: 1.2rem;
-}
-
-/* line 88, scss/modules/homepage-sections/_help.scss */
-.help--slides-items .col .text {
   font-family: 'Merriweather', serif;
   font-weight: 300;
   font-style: normal;
   font-size: 1.2rem;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
-/* line 96, scss/modules/homepage-sections/_help.scss */
+.help--slides-items .col .text {
+  font-family: 'Merriweather', serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 1.4rem;
+  margin-right: 30px;
+}
+
 .help--slides-pagination {
   margin-top: 40px;
   display: -webkit-box;
