--- a/donation/templates/index.html
+++ b/donation/templates/index.html
@@ -7,7 +7,7 @@
         <div class="slogan--item">
           <h1>
             Zacznij pomagać!<br />
-            Oddaj niechciane rzeczy w zaufane ręce
+            Oddaj niepotrzebne rzeczy w zaufane ręce
           </h1>
         </div>
       </div>
@@ -62,9 +62,8 @@
       <div class="about-us--text">
         <h2>O nas</h2>
         <p>Każdy z nas ma w domu rzeczy, których chce się pozbyć, ale nie wie jak. My też! Szkoda wyrzucać, przecież można komuś pomóc. Właśnie tak zrodził się w naszych głowach pomysł na stworzenie miejsca, w którym każdy będzie mógł oddać niepotrzebne rzeczy zaufanym instytucjom.</p>
-        <img src="{% static 'images/signature.svg' %}" class="about-us--text-signature" alt="Signature" />
       </div>
-      <div class="about-us--image"><img src="{% static 'images/about-us.jpg' %}" alt="People in circle" /></div>
+      <div class="about-us--image"><img src="{% static 'images/aboutus.jpg' %}" alt="People in circle" /></div>
     </section>
 
      <section id="help" class="help">
